[package]
name = "csrf-cookie-token"
version = "0.1.0"
authors = ["Ivan Chepurnyi <ivan.chepurnyi@ecomdev.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12.34"
md5 = "0.6.1"
serde_json = "1.0.40"
rand = { version="0.7.0", features=["small_rng"] }
structopt = "0.3.1"
futures = "*"
cookie = "0.12.0"